# ROS-HF-Vision

./: .gitattributes  README.md  requirements.txt
data/rosbag2_2024_07_11-14_07_48/: metadata.yaml  rosbag2_2024_07_11-14_07_48_0.db3
src/camera_publisher/: CMakeLists.txt  package.xml
src/camera_publisher/camera_publisher/: py_pub.py  py_sub.py
src/camera_publisher/include/camera_publisher/: cam_display.hpp  cam_pub.hpp
src/camera_publisher/launch/: testcam.launch.py  testcam_py.launch.py
src/camera_publisher/src/: cam_display.cpp  cam_pub.cpp
src/detr/: package.xml  setup.cfg  setup.py
src/detr/detr/: DetectionVisualizer.py  Detr.py  ObjectDetectionNode.py
src/detr/launch/: detr.launch.py
src/hf_im_seg/hf_im_seg/: MaskFormerImage.py
src/hf_launch/: package.xml  setup.cfg  setup.py
src/hf_launch/launch/: bag.launch.py  camera.launch.py  dataset.launch.py  default.launch.py  ml_models.launch.py
src/hf_utils/: README.md  package.xml  setup.cfg  setup.py
src/hf_utils/launch/: german-traffic-sign-dataset_keremberke.launch.py  maskformer.launch.py
src/hf_utils/models/: BBoxImageDatasetPublisher.py  ModelNode.py
src/hf_utils/models/obj_det/detr/: DETR.py
src/hf_utils/models/segmentation/maskformer/: Maskformer.py
src/hf_utils/viz_utils/: ImageDataManager.py  MatPlotLibViz.py  VizNode.py
src/id2label_mapper/: CMakeLists.txt  README.md  package.xml
src/id2label_mapper/id2label_mapper_py/: id2label_mapper.py  mapper.py  test_id2label.py
src/id2label_mapper/launch/: test_id2label.launch.py
src/id2label_mapper/share/id2label_mapper/: ade20k_id2label.json  coco2017_id2label.json
src/id2label_mapper_services/: CMakeLists.txt  package.xml
src/id2label_mapper_services/srv/: GetDatasetID2Label.srv  GetID2Label.srv  GetLocaltoGlobalMap.srv  MapDetection2D.srv  MapImage.srv  RegisterDatasetMapJSON.srv
src/matplotlib_viewer/: README.md
src/matplotlib_viewer/matplotlib_viewer/: MatPlotLibViz.py  VizNode.py
