<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>id2label_mapper</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="nathanbcorral@gmail.com">nate</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>rclcpp_components</depend>
  <depend>vision_msgs</depend>
  <depend>std_msgs</depend>
  <depend>id2label_mapper_services</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>launch_testing</test_depend>

  <!-- For building custom srv -->
  <!-- <buildtool_depend>rosidl_default_generators</buildtool_depend> -->
  <!-- <exec_depend>rosidl_default_runtime</exec_depend> -->
  <!-- <member_of_group>rosidl_interface_packages</member_of_group> -->

  <!-- Add .srv files as exec depend -->
  <!-- <exec_depend>id2label_mapper_services</exec_depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>

  <exec_depend>ros2launch</exec_depend>
</package>
